docs: annotations to OpenAPI
