# src/OpenApi/routes.ts
@@ -5,6 +5,8 @@ import { Controller, ValidationService, FieldErrors, ValidateError, TsoaRoute, H
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { CpuInfoController } from './../Presentation/Controller/Infra/CPU/CpuInfoController';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { GetContainer } from './../Presentation/Controller/Infra/Docker/GetContainers';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { GetFreeMemoryController } from './../Presentation/Controller/Infra/Memory/GetFreeMemController';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { GetVersion } from './../Presentation/Controller/Infra/Node/GetVersion';
@@ -46,6 +48,31 @@ export function RegisterRoutes(app: express.Router) {
                 validatedArgs = getValidatedArgs(args, request, response);
 
                 const controller = new CpuInfoController();
+
+
+              const promise = controller.handle.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, undefined, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/infra/docker/container',
+            ...(fetchMiddlewares<RequestHandler>(GetContainer)),
+            ...(fetchMiddlewares<RequestHandler>(GetContainer.prototype.handle)),
+
+            function GetContainer_handle(request: any, response: any, next: any) {
+            const args = {
+                    all: {"in":"query","name":"all","dataType":"string"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new GetContainer();
 
 
               const promise = controller.handle.apply(controller, validatedArgs as any);
